# rust-web-scaffold

./: .gitignore  Cargo.toml  config.toml
src/: lib.rs
src/auth/: cache.rs  config.rs  error.rs  extracts.rs  mod.rs  types.rs
src/config/: error.rs  mod.rs
src/database/: config.rs  mod.rs  mysql.rs
src/http/: app.rs  config.rs  headers.rs  layers.rs  mod.rs
src/log/: config.rs  mod.rs
src/pagination/: extracts.rs  mod.rs  response.rs  types.rs
src/redis/: config.rs  mod.rs  types.rs
src/result/: error.rs  mod.rs  response.rs
src/types/: async_trait.rs
src/utils/: ip.rs  mod.rs  time.rs
