[package]
name = "web-scaffold"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
async-trait = { version = "0.1.88" }
log = "0.4.27"
dotenv = "0.15.0"
config = "0.15.11"
log4rs = "1.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"
# http
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.45.1", features = ["full"], optional = true }
tower-http = { version = "0.6.6", features = ["cors", "request-id", "trace", "propagate-header", "timeout"], optional = true }
tower = { version = "0.5.2", optional = true }
# mysql
diesel = { version = "2.2.11", optional = true }
diesel-async = { version = "0.5.2", features = ["deadpool", "mysql"], optional = true }
deadpool = { version = "0.12.2", features = ["managed"], optional = true }
# redis
redis = { version = "0.32.0", features = ["aio", "connection-manager", "tokio-comp"], optional = true }

[features]
http = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:tower", "dep:tower"]
mysql = ["dep:diesel", "dep:diesel-async", "dep:deadpool"]
rds = ["dep:redis"]
